# mongoose-rs

./: .editorconfig  Cargo.toml  License  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
.mongoose-rs/: docker-compose.yml
examples/uuid/: Cargo.toml
examples/uuid/src/: main.rs
src/: connection.rs  database.rs  lib.rs  logger.rs  main.rs  model.rs  types.rs
src/models/: user.rs
src/tests/: create.rs  create_tests.rs  delete.rs  delete_tests.rs  integration.rs  mod.rs  read.rs  read_tests.rs  update.rs  update_tests.rs  view_tests.rs
src/tests/mock/: mod.rs  post_model.rs  user_model.rs
