[package]
name = "mongoose"
version = "0.2.0"
edition = "2021"
authors = ["Jude Giordano"]
repository = "https://github.com/judegiordano/mongoose-rs"
homepage = "https://github.com/judegiordano/mongoose-rs"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/judegiordano/mongoose-rs"
description = "Convenient MongoDb Wrappers"
publish = true
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
opt-level = 3     # 0-3
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization

[dependencies]
bson = { version = "2.5.0", features = ["chrono-0_4"] }
convert_case = { version = "0.6.0" }
futures = { version = "0.3.25" }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
once_cell = { version = "1.19.0" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = { version = "1.0.38" }
tracing = { version = "0.1.37" }
# optional
nanoid = { version = "0.4.0", optional = true }

[features]
uuid = ["bson/uuid-1"]
nanoid = ["dep:nanoid"]

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros"] }
serde_json = "1.0.91"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
anyhow = "1.0.68"
slug = "0.1.4"
rust-argon2 = "1.0.0"
md5 = "0.7.0"
